# black-box

./: .gitignore  Cargo.toml  README.md
assets/levels/: binary.ron  counter.ron  dec_inc.ron  inc_dec.ron  mod_counter.ron  mod_minus_counter.ron  pin_pad.ron  pin_pad2.ron  toggle_neg_pos.ron  toggle_negout_pos.ron  toggle_rot.ron  two_toggles.ron
assets/models/: box.glb  button.glb  button_base.glb  button_body.glb  display.glb
assets/prefabs/: generic_box.ron
assets/sprites/: box.ron  button.ron
config/: display_config.ron  input.ron
scripts/: release-all.sh  release.sh
src/: actions.rs  black_state.rs  components.rs  level.rs  main.rs  prefabs.rs  resources.rs  systems.rs  transitions.rs
src/box_internal/: actions.rs  components.rs  mod.rs  systems.rs
src/roaming/: components.rs  mod.rs  systems.rs  transitions.rs
src/standard_box/: components.rs  mod.rs  systems.rs  transitions.rs
