[package]
name = "black-box"
version = "0.2.0"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
edition = "2018"
description = "Puzzle game about expirementation."

[dependencies]
bevy = "0.5"
heron = "0.5.1"
bevy_mod_raycast = "0.2.2"
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
